Fix for logo arrangement on mobile

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@ a:hover {
 
 .brand-logos img {
     width: 40px;
+    padding: 0 10px;
 }
 
 .event-details {
